--- a/web/html/src/branding/css/susemanager/components/tables.less
+++ b/web/html/src/branding/css/susemanager/components/tables.less
@@ -8,6 +8,12 @@
   }
 }
 
+.spacewalk-list-bottom-addons > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .table-search-wrapper {
   flex: 1;
 }
@@ -27,6 +33,7 @@ thead tr {
     padding: 0 !important;
     border-width: 0 !important;
     color: @eos-bc-gray-1000 !important;
+    font-weight: bold !important;
   }
 }
 
